# spyglass-paper

./: .gitignore  CITATION.cff  README.md  environment.yml  pinned_paper_environment.yml  pyproject.toml
data/nwb/raw/: README.md
notebooks/figure5/: MS2220180629_sorted_decode.ipynb  figure5.py  j1620210710_clusterless_decode.ipynb
notebooks/figure5-supplemental/: figure5_supp.py
src/: paper_plotting.py  test_paper_plotting.py
workflows/: test_package_build.yml
