[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "repository_name"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "xarray",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/edeno/repository_name"
"Bug Tracker" = "https://github.com/edeno/repository_name/issues"

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/repository_name/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/repository_name"]
