[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spyglass-paper"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "spyglass-neuro",
    "spectral_connectivity",
    "seaborn",
    "matplotlib",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/edeno/spyglass-paper"
"Bug Tracker" = "https://github.com/edeno/spyglass-paper/issues"

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/spyglass-paper/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass-paper"]
